--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <title>Feliz 2022 🎆</title>
+    <title>Feliz Ano Novo🎆</title>
 </head>
 
 <body>
